# cih-2026

./: .gitignore  Cargo.toml  README.md  architecture_progress.md  ci.sh  rust-toolchain.toml
.claude/: settings.local.json.tmp.312715.94c73349ed6a
config/: field.toml  gateway.toml
crates/tgw-core/: Cargo.toml
crates/tgw-core/src/: clinical.rs  config.rs  envelope.rs  error.rs  fec.rs  key.rs  lib.rs  mac.rs  model.rs  pake.rs  wire.rs
crates/tgw-core/tests/: raptorq_spike.rs
crates/tgw-fhir/: Cargo.toml
crates/tgw-fhir/src/: lib.rs
crates/tgw-fhir/tests/: plausibility.rs  r5_contract.rs
crates/tgw-field/: Cargo.toml
crates/tgw-field/src/: breaker.rs  discovery.rs  lib.rs  main.rs  metrics.rs  pacer.rs  pairing.rs  queue.rs  relay.rs  sender.rs  session.rs  vitals.rs
crates/tgw-field/tests/: delivery.rs
crates/tgw-gateway/: Cargo.toml
crates/tgw-gateway/src/: lib.rs  main.rs  pairing.rs  store.rs
crates/tgw-gateway/static/: app.css  app.js  index.html
crates/tgw-gateway/static/mock/: observations.json  queue.json
crates/tgw-gateway/tests/: api_contract.rs  observations_flags.rs  store_api.rs  udp_listener.rs
crates/tgw-netsim/: Cargo.toml
crates/tgw-netsim/src/: lib.rs  main.rs
crates/tgw-netsim/tests/: corruption.rs  loss_model.rs  pacer.rs
demo/: CUE_CARD.md  knob.sh  run-client.sh  run-hospital.sh  serve-local-ui.sh  setup.sh  teardown.sh
field-ui/: app.css  app.js  index.html
hospital-ui/: app.css  app.js  base.css  index.html
metrics-ui/: app.css  app.js  index.html
scripts/: preflight.sh  stress_e2e.sh  validate_obs.py
shared/: store.js
src/: lib.rs
tests/: lossy_delivery.rs  paired_delivery.rs  relay_delivery.rs
