# PLACEHOLDER — owned by Muaz (muaz/core) per tasks/CONTRACTS.md.
# Contract-1 stub so Twaha's crates compile. Muaz's branch is authoritative;
# do NOT build real transport/crypto logic here on Twaha's branch.
[package]
name = "tgw-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
uuid.workspace = true
time.workspace = true
thiserror.workspace = true
tracing.workspace = true
# Declared now so the whole team's build resolves; Muaz uses these for the real codec.
ciborium.workspace = true
lz4_flex.workspace = true
chacha20poly1305.workspace = true
raptorq.workspace = true
rand.workspace = true
