# tgw-core — OWNER: Muaz (muaz/core) per tasks/CONTRACTS.md.
# Bundle model, CBOR/lz4/AEAD codec, RaptorQ framing, wire protocol, config types.
# Contract 1 (tasks/CONTRACTS.md) is the frozen public surface Twaha codes against.
[package]
name = "tgw-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
uuid.workspace = true
time.workspace = true
thiserror.workspace = true
tracing.workspace = true
ciborium.workspace = true
lz4_flex.workspace = true
chacha20poly1305.workspace = true
raptorq.workspace = true
rand.workspace = true
sha2.workspace = true
toml.workspace = true
