# OWNER: Twaha (twaha/gateway) per tasks/CONTRACTS.md.
[package]
name = "tgw-netsim"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
