# OWNER: Twaha (twaha/gateway) per tasks/CONTRACTS.md.
[package]
name = "tgw-netsim"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
# Live control server: a slider in the dashboard adjusts loss/bandwidth while traffic flows.
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
